Sat Jan  6 02:35:33 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - removed the "sms", "ippon", "mustek", "fentonups", "esupssmart" and
   "blazer" drivers as they have been obsoleted by "megatec". This
   included their manpages, all references in Makefiles and all
   references in the documentation that only made sense if they were
   still available on the tree.

Fri Jan  5 19:57:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - added IPv6 support (Alioth Patches #304310) (IPv4 still seems to
   work after applying this patch, but can't test IPv6)

Fri Jan  5 19:15:13 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/cmdvartab: added ups.realpower, ups.realpower.nominal,
   input.frequency.low, input.frequency.high and battery.capacity

Fri Jan  4 10:13:05 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 * final removal of the legacy hidups driver. It is now fully
   replaced by the newhidups driver (soon to be renamed usbhid-ups).
   Note that the hiddev code and macro is kept for energizerups
   - drivers/hidups.*: removed
   - drivers/Makefile.am: remove hidups references
   - man/hidups.8: removed
   - man/Makefile.am, man/nutupsdrv.8: remove hidups references
   - man/newhidups.8: add a note for the replacement of hidups
   - docs/FAQ, MAINTAINERS: few update

Fri Jan  5 00:45:11 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - drivers/optiups.c, man/optiups.8, data/driver.list: Added Matthias Goebl's
   patch to make the optiups driver work with the ONLINE-USV Zinto D.

Thu Jan  4 20:08:50 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/powerpanel.c: remove trailing spaces and leading zero's
   from values read from UPS (except for enumerated ones that could
   be used for setting variables)
 - common/common.c, include/common.h: let 'rtrim' function return
   pointer to the trimmed string (to make it easier to use in
   dstate_setinfo calls, will be silently discarded if not used)
