@@ -38,9 +38,6 @@
 #define shutdown_how 2
 #endif
 
-/* From IPv6 patch (doesn't seem to be used)
-extern int opt_af;
- */
 struct {
 	int	flags;
 	const	char	*str;
@@ -424,8 +421,13 @@ int upscli_sslcert(UPSCONN *ups, const char *file, const char *path, int verify)
 	
 int upscli_connect(UPSCONN *ups, const char *host, int port, int flags)
 {
+#ifndef	HAVE_IPV6
+	struct	sockaddr_in	local, server;
+	struct	hostent	*serv;
+#else
 	struct addrinfo hints, *r, *rtmp;
 	char *service;
+#endif
 
 	/* clear out any lingering junk */
 	ups->fd = -1;
@@ -452,6 +454,80 @@ int upscli_connect(UPSCONN *ups, const char *host, int port, int flags)
 		return -1;
 	}
 
+#ifndef	HAVE_IPV6
+	if ((serv = gethostbyname(host)) == (struct hostent *) NULL) {
+
+		ups->upserror = UPSCLI_ERR_NOSUCHHOST;
+		return -1;
+	}
+
+	if ((ups->fd = socket(AF_INET, SOCK_STREAM, 0)) < 0) {
+		ups->upserror = UPSCLI_ERR_SOCKFAILURE;
+		ups->syserrno = errno;
+		return -1;
+	}
+
+	memset(&local, '\0', sizeof(struct sockaddr_in));
+	local.sin_family = AF_INET;
+	local.sin_port = htons(INADDR_ANY);
+
+	memset(&server, '\0', sizeof(struct sockaddr_in));
+	server.sin_family = AF_INET;
+	server.sin_port = htons(port);
+
+	memcpy(&server.sin_addr, serv->h_addr, serv->h_length);
+
+	if (bind(ups->fd, (struct sockaddr *) &local, 
+		sizeof(struct sockaddr_in)) == -1) {
+		ups->upserror = UPSCLI_ERR_BINDFAILURE;
+		ups->syserrno = errno;
+		close(ups->fd);
+		ups->fd = -1;
+
+		return -1;
+	}
+
+	if (connect(ups->fd, (struct sockaddr *) &server, 
+		sizeof(struct sockaddr_in)) == -1) {
+		ups->upserror = UPSCLI_ERR_CONNFAILURE;
+		ups->syserrno = errno;
+		close(ups->fd);
+		ups->fd = -1;
+
+		return -1;
+	}
+
+	/* don't use xstrdup for cleaner linking (fewer dependencies) */
+	ups->host = strdup(host);
+
+	if (!ups->host) {
+		close(ups->fd);
+		ups->fd = -1;
+
+		ups->upserror = UPSCLI_ERR_NOMEM;
+		return -1;
+	}
+
+	ups->port = port;
+
+	if (flags & UPSCLI_CONN_TRYSSL) {
+		upscli_sslinit(ups);
+
+		/* see if something made us die inside sslinit */
+		if (ups->upserror != 0)
+			return -1;
+	}
+
+	if (flags & UPSCLI_CONN_REQSSL) {
+		if (upscli_sslinit(ups) != 1) {
+			ups->upserror = UPSCLI_ERR_SSLFAIL;
+			upscli_closefd(ups);
+			return -1;
+		}
+	}
+
+	return 0;
+#else
 	service = malloc (sizeof (char) * 6);
 	if (service == NULL) {
 		ups->upserror = UPSCLI_ERR_NOMEM;
@@ -532,6 +608,7 @@ int upscli_connect(UPSCONN *ups, const char *host, int port, int flags)
 	freeaddrinfo (rtmp);
 
 	return -1;
+#endif
 }
 
 /* map upsd error strings back to upsclient internal numbers */
@@ -872,6 +949,34 @@ int upscli_splitname(const char *buf, char **upsname, char **hostname,
 
 	ptr = ap;
 
+#ifndef	HAVE_IPV6
+	cp = strchr(ptr, ':');
+
+	if (cp) {
+		*cp++ = '\0';
+		*hostname = strdup(ptr);
+
+		if (!*hostname) {
+			fprintf(stderr, "upscli_splitname: strdup failed\n");
+			return -1;
+		}
+
+		ptr = cp;
+
+		*port = strtol(ptr, (char **) NULL, 10);
+
+	} else {
+
+		*hostname = strdup(ptr);
+
+		if (!*hostname) {
+			fprintf(stderr, "upscli_splitname: strdup failed\n");
+			return -1;
+		}
+
+		*port = PORT;
+	}
+#else
 	if (*ptr != '[') {
 		cp = strchr(ptr, ':');
 		if (cp) {
@@ -915,6 +1020,7 @@ int upscli_splitname(const char *buf, char **upsname, char **hostname,
 			return -1;
 		}
 	}
+#endif
 
 	return 0;
 }
